<resources>
    <string name="app_name">SmartBin</string>
    <string name="pass_requirement">Password must contain at least 6 characters!</string>

    <string name="login">Login</string>
    <string name="dont_have_acc">Belum mempunyai akun ?</string>

    <string name="error_empty">Please fill in the field!</string>
    <string name="error_email">Invalid Email Address!</string>

    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_komplek">Nama Komplek - Blok</string>
    <string name="hint_nomor">Nomor Rumah</string>

    <string name="register">Register</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_about">About</string>

    <string name="copyright">Copyright @ 2022</string>
    <string name="about_description">Aplikasi ini dibuat untuk membantu masyarakat mengatasi menumpuknya sampah di tempat sampah</string>
    <string name="logo_smartbin">Logo SmartBin</string>

    <string name="home_detail">Detail</string>
    <string name="home_nama">Nama Pemilik :</string>
    <string name="home_nama_value"> Nama Kamu Disini</string>
    <string name="home_komplek">Komplek :</string>
    <string name="home_komplek_value"> Komplek XXX</string>
    <string name="home_blok">Blok / No. Rumah :</string>
    <string name="home_blok_value"> 4C / No. 25</string>
    <string name="home_volume">Volume Tempat Sampah</string>
    <string name="home_volume_percent">0%</string>

    <string name="Alamat">Alamat</string>
    <string name="Message_hint">Tulis Pesan Anda Disini... </string>
    <string name="Message_disclaimer">*Request hanya 1 kali per hari</string>
    <string name="request_jemput">Request Jemput</string>

    <string name="login_success">Login Success</string>
    <string name="positive_button_text">Next</string>
    <string name="logout">Logout</string>

    <string name="logout_title">Logout Dialog!</string>
    <string name="logout_message">Are you sure to logout?</string>
    <string name="cancel">Cancel</string>

    <string name="notif_title">Halo %s!</string>
    <string name="notif_message">Tempat sampahmu sudah penuh!, segera beri pesan ke petugas yaa…</string>

    <string-array name="nomor_rumah">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>