<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_smartbin"
            android:layout_width="146dp"
            android:layout_height="75dp"
            android:scaleType="center"
            android:layout_marginTop="64dp"
            android:src="@drawable/smart_bin_small"
            android:contentDescription="@string/logo_smartbin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.dicoding.smartbin.ui.customview.InputEditText
            android:id="@+id/ed_register_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:drawablePadding="18dp"
            android:inputType="text"
            android:hint="@string/hint_username"
            android:textColorHint="@color/dark_green"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_smartbin" />

        <com.dicoding.smartbin.ui.customview.InputEditText
            android:id="@+id/ed_register_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="18dp"
            android:inputType="textWebEmailAddress"
            android:hint="@string/hint_email"
            android:textColorHint="@color/dark_green"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_username"
            app:layout_constraintStart_toStartOf="@+id/ed_register_username"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_username" />

        <com.dicoding.smartbin.ui.customview.PasswordEditText
            android:id="@+id/ed_register_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="18dp"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/dark_green"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
            app:layout_constraintStart_toStartOf="@+id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

        <!--<com.dicoding.smartbin.ui.customview.InputEditText
            android:id="@+id/ed_register_komplek"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="18dp"
            android:inputType="text"
            android:hint="@string/hint_komplek"
            android:textColorHint="@color/dark_green"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
            app:layout_constraintStart_toStartOf="@+id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />-->

        <!--<com.dicoding.smartbin.ui.customview.InputEditText
            android:id="@+id/ed_register_nomor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:hint="@string/hint_nomor"
            android:textColorHint="@color/dark_green"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_komplek"
            app:layout_constraintStart_toStartOf="@+id/ed_register_komplek"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_komplek">

        </com.dicoding.smartbin.ui.customview.InputEditText>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_komplek"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="54dp"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/ic_home"
            app:startIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
            app:layout_constraintStart_toStartOf="@+id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteKomplek"
                android:background="@drawable/textbox_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="16dp"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:text="@string/hint_komplek"
                android:textColor="@color/dark_green"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_nomor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="54dp"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/ic_list"
            app:startIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_komplek"
            app:layout_constraintStart_toStartOf="@+id/ed_register_komplek"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_komplek">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteNoRumah"
                android:background="@drawable/textbox_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="16dp"
                android:inputType="none"
                android:text="@string/hint_nomor"
                android:textColor="@color/dark_green"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/register"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_nomor" />

        <ProgressBar
            android:id="@+id/loadingIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            tools:visibility="visible"
            android:indeterminateTint="?attr/colorPrimaryVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

